# Flash-Audit-Core

./: .env.example  .gitignore  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  bench-results.txt  docker-compose.yml  install.ps1  install.sh
.github/workflows/: audit.yml  backend.yml  dashboard.yml  docker.yml
backend/: Dockerfile  alembic.ini  audit.md  database.py  echo  flashaudit.db  main.py  main_utils.py  models.py  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_audit_log.py  003_add_finding_history.py  004_rename_webhook_secret.py
backend/data/: remediation_playbooks.yaml
backend/dependencies/: auth.py
backend/routers/: analytics.py  auth.py  cli.py  exports.py  findings.py  repositories.py  settings.py
backend/services/: analytics.py  audit.py  exports.py  policies.py  rate_limiter.py  remediation.py  webhooks.py
backend/tests/: conftest.py  test_auth.py  test_cli_endpoints.py  test_findings.py  test_health.py  test_remediation.py  test_security.py
dashboard/: Dockerfile  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/exports/: page.tsx
dashboard/src/components/: app-sidebar.tsx  dashboard-layout.tsx
dashboard/src/lib/: api.ts  auth-context.tsx  queries.ts
scripts/: bench.sh
src/: main.rs  scanner.rs
src/utils/: config.rs  mod.rs  sarif.rs  state.rs  telemetry.rs
(+4 files in other folders)
